# hexaurl

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  canbench.yml
.github/workflows/: rust.yml
assets/: logo.afpub  logo.avif  validate_logo.avif
crates/hexaurl/: Cargo.toml  README.md
crates/hexaurl-config/: Cargo.toml  README.md
crates/hexaurl-config/src/: lib.rs  validate.rs
crates/hexaurl-validate/: Cargo.toml  README.md
crates/hexaurl-validate/src/: error.rs  lib.rs  validate_char.rs  validate_swar.rs
crates/hexaurl/benches/: bench.rs  list-LICENSE  list.txt  names.txt
crates/hexaurl/benches/canbench/: Cargo.toml
crates/hexaurl/benches/canbench/src/: benches.rs  lib.rs
crates/hexaurl/src/: decode.rs  encode.rs  lib.rs  struct_api.rs  utils.rs
crates/hexaurl/src/struct_api/: core.rs
design/src/: design.typ  perf_rejected_changes.typ
design/src/template/: conf.typ
docs/: design.typ
