[workspace]
members = ["crates/hexaurl", "crates/hexaurl-config", "crates/hexaurl-validate"]
resolver = "2"

[workspace.dependencies]
hexaurl = { path = "crates/hexaurl" }
hexaurl-config = { path = "crates/hexaurl-config" }
hexaurl-validate = { path = "crates/hexaurl-validate" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.test]
lto = true
opt-level = 3
codegen-units = 1
