[package]
name = "hexaurl-config"
version = "0.1.0"
authors = ["Inomoto, Yota <yota@perforate.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.78.0"

description = "HexaURL encoding format, suitable for user IDs and URL-safe strings."
include = [
    "/src",
    "/Cargo.toml",
    "/README.md",
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
]

documentation = "https://docs.rs/hexaurl-config/"
repository = "https://github.com/wiyota/hexaurl/"

readme = "README.md"

categories = ["encoding", "text-processing"]
keywords = ["sixbit", "dec", "encoding", "text", "url", "serialization"]
