[package]
name = "hexaurl-validate"
version = "0.0.1"
authors = ["Inomoto, Yota <yota@perforate.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
rust-version = "1.31.0"

description = "HexaURL encoding format, suitable for user IDs and URL-safe strings."
include = [
    "/src",
    "/Cargo.toml",
    "/README.md",
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
]

documentation = "https://docs.rs/hexaurl-validate/"
repository = "https://github.com/perforate-org/hexaurl/"

readme = "README.md"

categories = ["compression", "encoding"]
keywords = ["database", "text", "string"]

[dependencies]
hexaurl-config = { workspace = true }
thiserror = "2.0"

[dev-dependencies]
hexaurl = { workspace = true }

[features]
char = []

[package.metadata.docs.rs]
features = ["char"]
