[package]
name = "hexaurl"
version = "0.1.0"
authors = ["Inomoto, Yota <yota@perforate.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.78.0"

description = "HexaURL encoding format, suitable for user-specified ID and URL safe strings."
include = [
    "/src",
    "/Cargo.toml",
    "/README.md",
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
]

documentation = "https://docs.rs/hexaurl/"
repository = "https://github.com/wiyota/hexaurl/"

readme = "README.md"

categories = ["encoding", "text-processing"]
keywords = ["sixbit", "dec", "encoding", "text", "url", "serialization"]

[dependencies]
hexaurl-config = { workspace = true }
hexaurl-validate = { workspace = true, features = ["validate_char"] }
ic-stable-structures = { version = "0.6", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
bitcode = "0.6.3"
once_cell = "1.12"
rand = "0.9"
serde_json = "1.0"

[features]
default = ["with-struct"]
ic = ["ic-stable-structures"]
with-struct = ["serde"]
nightly = []

[[bench]]
name = "bench"
harness = true
