[package]
name = "hexaurl"
version = "0.0.1"
authors = ["Inomoto, Yota <yota@perforate.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.78.0"

description = "HexaURL encoding format, suitable for user-specified ID and URL safe strings."
include = [
    "/src",
    "/Cargo.toml",
    "/README.md",
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
]

documentation = "https://docs.rs/hexaurl/"
repository = "https://github.com/wiyota/hexaurl/"

readme = "README.md"

categories = ["encoding", "text-processing"]
keywords = ["sixbit", "dec", "encoding", "text", "url", "serialization"]

[dependencies]
arbitrary = { version = "1.4", optional = true }
candid = { version = "0.10", optional = true }
hexaurl-config = { workspace = true }
hexaurl-validate = { workspace = true }
ic-stable-structures = { version = "0.6", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
arbtest = "0.3"
bincode = "1.3"
once_cell = "1.20"
serde_json = "1.0"

[features]
default = ["with-struct", "serde"]
arbitrary = ["dep:arbitrary"]
candid = ["dep:candid", "serde"]
ic = ["candid", "ic-stable-structures"]
with-struct = []
nightly = []

[[bench]]
name = "bench"
harness = true
