[package]
name = "hexaurl"
version = "0.0.1"
authors = ["Inomoto, Yota <yota@perforate.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.56.0"

description = "HexaURL, an fixed-size encoding format designed for validating case-insensitive URL-safe strings and enabling high-speed search capabilities."
include = [
    "/src",
    "/Cargo.toml",
    "/README.md",
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
]

documentation = "https://docs.rs/hexaurl/"
repository = "https://github.com/perforate-org/hexaurl/"

readme = "README.md"

categories = ["compression", "encoding"]
keywords = ["parser", "database", "text", "string"]

[dependencies]
arbitrary = { version = "1", optional = true }
candid = { version = "0.10", optional = true }
hexaurl-config = { workspace = true }
hexaurl-validate = { workspace = true }
ic-stable-structures = { version = "0.6", optional = true }
serde = { version = "1", optional = true, default-features = false }

[dev-dependencies]
arbtest = "0.3"
bincode = "1"
fixedstr = "0.5"
once_cell = "1"
serde_json = "1"

[features]
all = ["arbitrary", "candid", "ic-stable", "pub-struct-core", "default", "nightly"]
default = ["struct-api", "serde"]
arbitrary = ["dep:arbitrary"]
candid = ["dep:candid", "serde"]
ic-stable = ["ic-stable-structures"]
struct-api = []
pub-struct-core = ["struct-api"]
nightly = []

[[bench]]
name = "bench"
harness = true

[package.metadata.docs.rs]
features = ["arbitrary", "candid", "ic-stable", "pub-struct-core", "default"]
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
