[package]
publish = false
name = "canbench-hexaurl"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.14"
canbench-rs = { version = "0.1.15", optional = true }
ic-cdk = "0.17.2"
ic-cdk-macros = "0.17.2"
ic-stable-structures = "0.7"
hexaurl = { path = "../../", features = ["candid", "ic-stable"] }
once_cell = "1.21"

[features]
nightly = []
