[package]
publish = false
name = "canbench-hexaurl"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
canbench-rs = { version = "0.4", optional = true }
ic-cdk = "0.19"
ic-cdk-macros = "0.19"
ic-stable-structures = "0.7"
hexaurl = { path = "../../", features = ["candid", "ic-stable"] }
once_cell = "1.21"

[features]
nightly = []
